# bookstore

./: pyproject.toml
Products/: pyproject.toml
Products/products/: asgi.py  settings.py  urls.py  wsgi.py
bookstore/: settings.py
