[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["marcelocruzsilverio <marcelosilveriocruz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
factory-boy = "^3.3.1"
Django = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
