[tool.poetry]
name = "products"
version = "0.1.0"
description = "Exercício novo projeto"
authors = ["marcelocruzsilverio <marcelosilveriocruz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pytest = "^8.3.2"
factory-boy = "^3.3.1"
django = "^5.1"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
